# SCIE

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pipeline_real_live_ingestion.py  seed_2026_current_sulsel_policy.py  seed_2026_sulsel_real_feeds.py  seed_live_multiplatform_sulsel.py  seed_sulsel.py  seed_sulsel_instagram_accounts.py  seed_sulsel_political_graph.py  seed_sulsel_politics.py  seed_sulsel_politics_main_focus.py  seed_sulsel_tiktok_accounts.py  seed_update_politik_layer.py  sync_neo4j.py  sync_sulsel_instagram_neo4j.py  sync_sulsel_tiktok_neo4j.py  upload_to_hf.py
.github/workflows/: ci.yml
apps/api/: .env  main.py  pyproject.toml
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/middleware/: auth.py
apps/api/app/models/: models.py
apps/api/app/routers/: alerts.py  analytics.py  auth.py  chat.py  graph.py  health.py  map.py  posts.py  reports.py  search.py  sources.py
apps/api/app/schemas/: auth.py  posts.py  sources.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/app/: layout.tsx  page.tsx  providers.tsx
apps/frontend/src/app/alerts/: page.tsx
apps/frontend/src/app/analytics/: page.tsx
apps/frontend/src/app/chat/: page.tsx
apps/frontend/src/app/dashboard/: page.tsx
apps/frontend/src/app/graph/: page.tsx
apps/frontend/src/app/login/: page.tsx
apps/frontend/src/app/register/: page.tsx
apps/frontend/src/app/reports/: page.tsx
apps/frontend/src/app/sources/: page.tsx
apps/frontend/src/components/dashboard/: IntelTicker.tsx
apps/frontend/src/components/map/: IndonesiaMapView.tsx  LayerControls.tsx
apps/frontend/src/contexts/: AuthContext.tsx
apps/frontend/src/lib/: api.ts  errors.ts
apps/graph-service/: pyproject.toml  worker.py
apps/graph-service/ingesters/: neo4j_ingester.py
apps/ingestion/: main.py  pyproject.toml
apps/ingestion/connectors/: rss.py  twitter.py
apps/ingestion/pipeline/: producer.py
apps/ingestion/scrapers/: tiktok_research_scraper.py
apps/nlp-worker/: pipeline.py  pyproject.toml  worker.py
apps/nlp-worker/processors/: geocoder.py  ner.py  sentiment.py  text_cleaner.py  topics.py
apps/openclaw-worker/: Dockerfile  package-lock.json  package.json
apps/openclaw-worker/src/: index.ts  redis.ts
apps/openclaw-worker/src/scrapers/: sulsel_targets.ts
data/: README.md  scie_dataset.json  scie_full_database.sql  scie_full_database_dump.sql  scie_graph_network.json  scie_posts_full.json
docs/: AI_STRATEGY.md  ANALYSIS_CAPABILITIES.md  ARCHITECTURE.md  DOMAIN_MODEL.md  PROJECT_VISION.md  ROADMAP.md  TECH_STACK.md
infra/docker/postgres/: init.sql
