[tool.poetry]
name = "scie-api"
version = "0.1.0"
description = "SCIE — Social Intelligence Engine API"
authors = ["SCIE Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.2.1"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Redis
redis = {extras = ["hiredis"], version = "^5.0.4"}

# Neo4j
neo4j = "^5.20.0"

# MinIO
minio = "^7.2.7"

# Elasticsearch
elasticsearch = {extras = ["async"], version = "^8.13.0"}

# Qdrant
qdrant-client = "^1.9.1"

# Utilities
httpx = "^0.27.0"
python-multipart = "^0.0.9"
tenacity = "^8.3.0"
structlog = "^24.1.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
