[tool.poetry]
name = "scie-nlp-worker"
version = "0.1.0"
description = "SCIE — NLP Worker Service"
authors = ["SCIE Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
redis = {extras = ["hiredis"], version = "^5.0.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
